# myvkfeed-fastapi

./: pyproject.toml
app/: __init__.py  config.py  database.py  exceptions.py  main.py
app/groups/: dto.py  models.py  router.py  schemas.py  service.py  utils.py
app/images/: models.py  router.py  schemas.py  service.py
app/migrations/: env.py
app/migrations/versions/: 037274c7f7ff_change_relationship_in_posts_images.py  04e5f2a21e8c_fix_back_populates_param_in_postimages.py  185f1eebfcb8_add_source_id_in_groups_model.py  1bbeb728db4c_replace_url_with_urls_in_postimages.py  1de5b8f1887f_remove_groups_group_image_id.py  29cf33196abe_remove_expires_at_param_from_refresh_.py  2fe69450d31c_add_uselist_false_to_posts_group.py  31db7ace9580_add_groupimages_group_id_remove_groups_.py  549caba0a83b_add_uselist_false_to_groupimages.py  5a983352b17c_add_groups_group_image_id_remove_.py  7065edf7b03e_initial_migration.py  7099422932c3_add_unique_true_on_groups_source_id.py  8caa9062a2e0_add_selectin_and_join_loads_in_.py  a4a7eb4d6249_create_default_date_joined_add_field_is_.py  a702ecdf94b7_groups_linked_with_users_posts_linked_.py  b5f7a4a4f016_add_cascades_to_group_post_image_.py  c2a99361e4f4_add_unique_true_on_users_name.py  cd45356fa001_add_group_id_in_posts.py  d0bb27be602c_add_groupimages_group_id.py  d427b93002f5_add_vk_id_in_users.py  d4749947c383_add_vk_id_to_posts_model.py  e11487fee7e4_add_unique_true_on_posts_vk_id.py  ece9b132087d_add_refresh_tokens_model.py  f80f31e4f07d_add_vk_shortname_instead_of_vk_id_in_.py  f9c49437a349_add_source_id_in_groups.py
app/pages/: filters.py  router.py
app/posts/: dto.py  models.py  router.py  schemas.py  service.py
app/service/: base.py
app/static/css/: error_page_style.css  filters_style.css  login_style.css  main.css  post_style.css  (+10 more)
app/templates/: 404.html  about.html  all_groups.html  base.html  base_groups_list.html  error_template.html  filters.html  group.html  hidden_groups.html  index.html  post.html  post_search.html  project_history.html  start_page.html  subs.html
app/users/: auth.py  models.py  password.py  router.py  schemas.py  service.py
vk/: config.py  groups.py  json_handler.py  posts.py  users.py
(+6 files in other folders)
