[tool.poetry]
name = "myvkfeed-fastapi"
version = "0.1.0"
description = "Web app for reading the feed from VK without any ads."
authors = ["nshib <nshib54321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
sqlalchemy-utils = "^0.41.2"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
