[tool.poetry]
name = "myvkfeed-fastapi"
version = "0.22.0"
description = "Web app for reading the feed from VK without any ads."
authors = ["nshib <nshib54321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
sqlalchemy-utils = "^0.41.2"
httpx = "^0.27.0"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
toml = "^0.10.2"
certifi = "^2024.7.4"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}


[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "myvkfeed-fastapi"
